--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ email-validator==2.1.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-decouple==3.8
+bcrypt==4.1.2
 
 # Cache
 redis==5.0.1
@@ -42,3 +43,15 @@ isort==5.12.0
 # Utilities
 python-dotenv==1.0.0
 tenacity==8.2.3
+
+# Email
+fastapi-mail==1.4.1
+
+# WebSockets
+websockets==12.0
+
+# AI
+anthropic==0.8.1
+
+# Rate Limiting
+slowapi==0.1.9
