--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,10 +41,8 @@ services:
     container_name: polimata-backend
     ports:
       - "8000:8000"
-    environment:
-      - DATABASE_URL=postgresql://polimata:polimata_dev@postgres:5432/polimata_db
-      - REDIS_URL=redis://redis:6379
-      - SECRET_KEY=dev-secret-key-change-in-production
+    env_file:
+      - ./backend/.env
     volumes:
       - ./backend:/app
     depends_on:
